--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5"
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/hooks": "^100.1.0",
+    "expo": "^54.0.0",
+    "expo-asset": "~12.0.9",
+    "expo-constants": "~18.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-location": "~19.0.7",
+    "expo-permissions": "^14.4.0",
+    "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.11",
+    "formik": "^2.4.6",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-worklets": "0.5.1",
+    "reanimated": "^0.0.1-alpha",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
