--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-community/hooks": "^100.1.0",
+    "@react-navigation/bottom-tabs": "^7.5.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.1",
+    "@react-navigation/stack": "^7.5.0",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.9",
@@ -25,6 +29,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-worklets": "0.5.1",
     "reanimated": "^0.0.1-alpha",
     "yup": "^1.6.1"
