--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.5.0",
+    "apisauce": "^3.2.1",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.9",
@@ -24,6 +25,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.11",
     "formik": "^2.4.6",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
